<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.login.LoginFragment">


    <EditText
        android:id="@+id/log_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:ems="10"
        android:hint="@string/email_example"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/log_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/press_passwor"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/log_email"
        app:layout_constraintStart_toStartOf="@+id/log_email"
        app:layout_constraintTop_toBottomOf="@+id/log_email" />

    <Button
        android:id="@+id/log_btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@+id/log_password"
        app:layout_constraintStart_toStartOf="@+id/log_password"
        app:layout_constraintTop_toBottomOf="@+id/log_password" />

    <TextView
        android:id="@+id/log_text_login_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/register_help"
        app:layout_constraintEnd_toEndOf="@+id/log_btn_login"
        app:layout_constraintStart_toStartOf="@+id/log_btn_login"
        app:layout_constraintTop_toBottomOf="@+id/log_btn_login" />
</androidx.constraintlayout.widget.ConstraintLayout>