<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".presentation.ui.details.actors.ActorFragment">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:navigationIcon="@drawable/ic_arrow_back"
                app:theme="@style/ToolbarColoredBackArrow"
                app:title="@string/actorInfo_title"
                app:titleTextColor="?attr/colorOnPrimary" />

            <ImageView
                android:id="@+id/poster"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/actorInfo_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar"
                tools:src="@drawable/ic_placeholder_female" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:textColor="?attr/colorOnBackground"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/poster"
                app:layout_constraintStart_toStartOf="@+id/poster"
                app:layout_constraintTop_toBottomOf="@+id/poster"
                tools:text="@tools:sample/full_names" />

            <TextView
                android:id="@+id/personal_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/personal_info"
                android:textColor="?attr/colorOnBackground"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name" />

            <LinearLayout
                android:id="@+id/personal_info_cat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/personal_info">

                <com.example.movieinfotest.presentation.ui.views.TitleTextView
                    android:id="@+id/famous_for"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    app:ttv_title="@string/actorInfo_notable_for" />

                <com.example.movieinfotest.presentation.ui.views.TitleTextView
                    android:id="@+id/gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    app:ttv_title="@string/actorInfo_gender" />

                <com.example.movieinfotest.presentation.ui.views.TitleTextView
                    android:id="@+id/birthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    app:ttv_title="@string/actorInfo_birthday" />

                <com.example.movieinfotest.presentation.ui.views.TitleTextView
                    android:id="@+id/deathday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    app:ttv_title="@string/actorInfo_deathday" />

                <com.example.movieinfotest.presentation.ui.views.TitleTextView
                    android:id="@+id/birth_place"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    app:ttv_title="@string/actorInfo_birthplace" />

                <com.example.movieinfotest.presentation.ui.views.TitleTextView
                    android:id="@+id/biography"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:ttv_title="@string/actorInfo_biography" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>