<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.register.RegistrationFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:elevation="16dp"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:theme="@style/ToolbarColoredBackArrow"
            app:title="@string/register" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reg_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email_example"
            android:inputType="textEmailAddress"
            android:textColor="?attr/colorOnBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reg_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/press_passwor"
            android:inputType="textPassword"
            android:textColor="?attr/colorOnBackground"
            app:layout_constraintEnd_toEndOf="@+id/reg_email"
            app:layout_constraintStart_toStartOf="@+id/reg_email"
            app:layout_constraintTop_toBottomOf="@+id/reg_email" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reg_btn_registration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/register"
            app:layout_constraintEnd_toEndOf="@+id/reg_password"
            app:layout_constraintStart_toStartOf="@+id/reg_password"
            app:layout_constraintTop_toBottomOf="@+id/reg_password" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/reg_text_login_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/login_help"
            app:layout_constraintEnd_toEndOf="@+id/reg_btn_registration"
            app:layout_constraintStart_toStartOf="@+id/reg_btn_registration"
            app:layout_constraintTop_toBottomOf="@+id/reg_btn_registration" />

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reg_text_login_help" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>