<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.random.RandomMovieFragment"
    android:layout_margin="@dimen/def_layout_margin">


    <Spinner
        android:id="@+id/gen_in_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toEndOf="@+id/gen_tv_genre"
        app:layout_constraintTop_toTopOf="@+id/gen_tv_genre" />

    <Button
        android:id="@+id/gen_btn_random"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="GET RANDOM"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gen_tv_genre"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/gen_result"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gen_btn_random"
        android:background="?attr/colorOnPrimary">

        <TextView
            android:id="@+id/gen_out_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:visibility="invisible"/>

        <ImageView
            android:id="@+id/gen_out_poster"
            android:layout_width="125dp"
            android:layout_height="187.5dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textSize="@dimen/def_item_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/gen_out_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="@dimen/def_item_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/textView3" />

        <TextView
            android:id="@+id/gen_out_rating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView3"
            android:textSize="@dimen/def_item_size"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/title"
            app:layout_constraintStart_toEndOf="@+id/gen_out_poster"
            app:layout_constraintTop_toTopOf="@+id/gen_out_poster" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/rating"
            android:textSize="@dimen/def_item_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/gen_out_name" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/gen_tv_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gen_year"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:viewBindingIgnore="true"/>

    <TextView
        android:id="@+id/gen_tv_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/gen_genre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gen_tv_year"
        tools:viewBindingIgnore="true"/>


</androidx.constraintlayout.widget.ConstraintLayout>