<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:theme="@style/ToolbarColoredBackArrow"
        app:title="@string/details_title" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".presentation.ui.details.DetailsFragment">

            <FrameLayout
                android:id="@+id/header_container"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="?attr/colorSurface"
                android:elevation="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:viewBindingIgnore="true">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/backdrop_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:foreground="@drawable/filter_color_white_start"
                    android:scaleType="fitXY" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="25dp"
                    app:cardBackgroundColor="?attr/colorSurface"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp">

                    <ImageView
                        android:id="@+id/info_poster"
                        android:layout_width="100dp"
                        android:layout_height="150dp"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/details_title" />
                </com.google.android.material.card.MaterialCardView>

                <ImageButton
                    android:id="@+id/info_add_to_favorite"
                    android:layout_width="21dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|bottom"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/favorite"
                    android:src="@drawable/ic_favorite"
                    app:tint="?attr/colorAccent" />

            </FrameLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/info_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textColor="?attr/colorOnBackground"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/header_container"
                tools:text="The Lord of The Rings III Returns king." />

            <TextView
                android:id="@+id/overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/details_overview"
                android:textColor="?attr/colorOnBackground"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/info_name" />

            <TextView
                android:id="@+id/info_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/overview" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/info_text_genres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/genres"
                android:textColor="?attr/colorOnBackground"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/info_description"
                app:layout_constraintTop_toBottomOf="@+id/info_description"
                tools:viewBindingIgnore="true" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/info_genres"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/info_description"
                app:layout_constraintStart_toEndOf="@+id/info_text_genres"
                app:layout_constraintTop_toTopOf="@+id/info_text_genres" />

            <LinearLayout
                android:id="@+id/actors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="vertical"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/info_text_genres"
                app:layout_constraintTop_toBottomOf="@+id/info_genres"
                tools:visibility="visible">

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switchActors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/actor_list"
                    android:textColor="?attr/colorOnBackground"
                    android:textOff="@string/cast"
                    android:textOn="@string/crew"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:thumb="@drawable/sw_thumb"
                    android:typeface="normal"
                    app:layout_constraintStart_toStartOf="@+id/info_text_genres"
                    app:layout_constraintTop_toBottomOf="@+id/info_genres"
                    app:showText="true"
                    app:switchPadding="16dp"
                    app:thumbTextPadding="4dp"
                    app:thumbTint="?attr/colorAccent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/castList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/switchActors"
                    app:layout_constraintVertical_bias="1.0"
                    tools:listitem="@layout/item_actor_list" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/crewList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/switchActors"
                    app:layout_constraintVertical_bias="1.0"
                    tools:listitem="@layout/item_actor_list" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>